Update mkdocs-material to 9.5.4, mkdocs-macros to 1.0.5, enable tooltips

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -11,6 +11,7 @@ theme:
     - content.action.edit
     - content.code.copy
     - content.code.select
+    - content.tooltips
     - navigation.expand
     - navigation.footer
     - navigation.instant
