--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,7 +1,7 @@
-updates.pin = [
-  # Use Scala 3 LTE
-  { groupId = "org.scala-lang", artifactId="scala3-library", version="3.3." }
-]
-
 # add try-chimney to defaults from https://github.com/scala-steward-org/scala-steward/blob/main/docs/repo-specific-configuration.md
 updates.fileExtensions = [".mill-version",".sbt",".sbt.shared",".sc",".scala",".scalafmt.conf",".yml","build.properties","mill-version","pom.xml","try-chimney.sh"]
+
+updates.pin = [
+  # Use Scala 3 LTS, ignore Scala 3 Next releases
+  { groupId = "org.scala-lang", artifactId="scala3-library", version="3.3." }
+]
