Start formatting scaladoc content, rename T parameters to A for consistency, fix a few errors in scaladocs

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -20,7 +20,7 @@ rewrite.scala3.removeOptionalBraces = false
 
 docstrings.blankFirstLine = no
 docstrings.style = SpaceAsterisk
-docstrings.wrap = no
+docstrings.wrap = yes
 
 newlines.sometimesBeforeColonInMethodReturnType = true
-lineEndings=unix
+lineEndings = unix
