Add documentation color palette toggle

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -5,8 +5,28 @@ docs_dir: 'docs'
 theme:
   name: material
   palette:
-    scheme: slate
-    primary: black
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: red
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: black
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
+
   features:
     - content.action.edit
     - content.code.copy
