Better Markdown formatting options (although still far from perfect)

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,7 +6,15 @@ runner.dialect = Scala213Source3
 fileOverride {
   "glob:**/src/main/scala-3/**" { runner.dialect = scala3 }
   "glob:**/src/test/scala-3/**" { runner.dialect = scala3 }
-  "glob:**/docs/**.md" { rewrite.scala3.convertToNewSyntax = false }
+  // for we we have to:
+  //  - replace ```scala with ```scala mdoc (MkDocs does NOT support these suffixes)
+  //  - run scalafmt --check docs/docs
+  //  - fix errors or ignore them (it doesn't handle Scala 3... while using scala3 runner messes up a lot of examples)
+  //  - replace ```scala mdoc with ```scala again
+  "glob:**/docs/**.md" {
+    maxColumn = 120
+    rewrite.scala3.convertToNewSyntax = false
+  }
 }
 
 align.preset = some
