--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -73,7 +73,11 @@ markdown_extensions:
 plugins:
   - macros
   - search
-copyright: 'Copyright © 2017—2024, <a href="https://scalaland.io">Scalaland.io</a>.<br />Chimney is FOSS released with Apache 2.0 licence'
+copyright: |
+  Copyright © 2017—2024, <a href="https://scalaland.io">Scalaland.io</a>.<br />
+  Chimney is FOSS licensed under Apache 2.0<br />
+  <br />
+  Documentation made with <a href="https://www.mkdocs.org">MkDocs</a>, <a href="https://squidfunk.github.io/mkdocs-material/">Material for MkDocs</a> and <a href="https://mkdocs-macros-plugin.readthedocs.io/">Mkdocs-Macros</a>, hosted on <a href="https://readthedocs.org/">ReadTheDocs</a>
 extra:
   generator: false
   social:
