--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -74,10 +74,12 @@ plugins:
   - macros
   - search
 copyright: |
+  <div style="color: var(--md-footer-fg-color--lighter)">
   Copyright © 2017—2024, <a href="https://scalaland.io">Scalaland.io</a>.<br />
   Chimney is FOSS licensed under Apache 2.0<br />
   <br />
-  Documentation made with <a href="https://www.mkdocs.org">MkDocs</a>, <a href="https://squidfunk.github.io/mkdocs-material/">Material for MkDocs</a> and <a href="https://mkdocs-macros-plugin.readthedocs.io/">Mkdocs-Macros</a>, hosted on <a href="https://readthedocs.org/">ReadTheDocs</a>
+  Documentation made with <a href="https://www.mkdocs.org" target="_blank" rel="noopener">MkDocs</a>, <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">Material for MkDocs</a> and <a href="https://mkdocs-macros-plugin.readthedocs.io/" target="_blank" rel="noopener">Mkdocs-Macros</a>, hosted on <a href="https://readthedocs.org/" target="_blank" rel="noopener">Read the Docs</a>
+  </div>
 extra:
   generator: false
   social:
