Update mkdocs to 1.6.0

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,2 +1,2 @@
-FROM squidfunk/mkdocs-material:9.5.18
-RUN pip install mkdocs-macros-plugin==1.0.5
+FROM squidfunk/mkdocs-material:9.5.19
+RUN pip install mkdocs==1.6.0 mkdocs-macros-plugin==1.0.5
