Verify if cookbook.md scripts compile with a script

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,6 +6,7 @@ runner.dialect = Scala213Source3
 fileOverride {
   "glob:**/src/main/scala-3/**" { runner.dialect = scala3 }
   "glob:**/src/test/scala-3/**" { runner.dialect = scala3 }
+  "glob:**/scripts/**" { runner.dialect = scala3 }
   // for we we have to:
   //  - replace ```scala with ```scala mdoc (MkDocs does NOT support these suffixes)
   //  - run scalafmt --check docs/docs
