Pin scala3-library_sjs1 just like scala3-library to LTS

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -3,5 +3,6 @@ updates.fileExtensions = [".mill-version",".sbt",".sbt.shared",".sc",".scala",".
 
 updates.pin = [
   # Use Scala 3 LTS, ignore Scala 3 Next releases
-  { groupId = "org.scala-lang", artifactId="scala3-library", version="3.3." }
+  { groupId="org.scala-lang", artifactId="scala3-library", version="3.3." },
+  { groupId="org.scala-lang", artifactId="scala3-library_sjs1", version="3.3." }
 ]
