Define cats version in docs with mkdocs.yml

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -94,6 +94,7 @@ extra:
     2_13: "2.13.14"
     3:    "3.3.3"
   libraries:
+    cats:             "2.12.0"
     scala_automapper: "0.7.0"
     henkan:           "0.6.5"
     ducktape:         "0.2.0"
