--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -98,5 +98,6 @@ extra:
     scala_automapper: "0.7.0"
     henkan:           "0.6.5"
     ducktape:         "0.2.0"
+    pprint:           "0.9.0"
   local:
     tag: !ENV [CI_LATEST_TAG, 'latest'] # used as git.tag fallback in Docker container
