Disable braceless syntax on Scala 3

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,9 +4,21 @@ project.includePaths."+" = ["glob:**/docs/**.md"]
 maxColumn = 120
 runner.dialect = Scala213Source3
 fileOverride {
-  "glob:**/src/main/scala-3/**" { runner.dialect = scala3 }
-  "glob:**/src/test/scala-3/**" { runner.dialect = scala3 }
-  "glob:**/scripts/**" { runner.dialect = scala3 }
+  "glob:**/src/main/scala-3/**" {
+    runner.dialect = scala3
+    runner.dialectOverride.allowSignificantIndentation = false
+    runner.dialectOverride.allowQuietSyntax = true
+  }
+  "glob:**/src/test/scala-3/**" {
+    runner.dialect = scala3
+    runner.dialectOverride.allowSignificantIndentation = false
+    runner.dialectOverride.allowQuietSyntax = true
+  }
+  "glob:**/scripts/**" {
+    runner.dialect = scala3
+    runner.dialectOverride.allowSignificantIndentation = false
+    runner.dialectOverride.allowQuietSyntax = true
+  }
   // for we we have to:
   //  - replace ```scala with ```scala mdoc (MkDocs does NOT support these suffixes)
   //  - run scalafmt --check docs/docs
