--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -100,5 +100,7 @@ extra:
     ducktape:         "0.2.5"
     pprint:           "0.9.0"
     quicklens:        "1.9.9"
+    enumeratum:       "1.7.5"
+    enumz:            "1.1.0"
   local:
     tag: !ENV [CI_LATEST_TAG, 'latest'] # used as git.tag fallback in Docker container
