Configure Scala Steward to update Scala and SCoverage together

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -6,3 +6,6 @@ updates.pin = [
   { groupId="org.scala-lang", artifactId="scala3-library", version="3.3." },
   { groupId="org.scala-lang", artifactId="scala3-library_sjs1", version="3.3." }
 ]
+pullRequests.grouping = [
+  { name="scala-versions", "title"="Scala compiler updates", "filter"=[{"group" = "org.scala-lang"}, {"group" = "org.scoverage"}] }
+]
