--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
   - 'Supported Patching': 'supported-patching.md'
   - 'Cookbook': 'cookbook.md'
   - 'Troubleshooting': 'troubleshooting.md'
+  - 'Cheat Sheet': 'cheatsheet.md'
   - 'Under the Hood': 'under-the-hood.md'
   - 'Benchmarks': 'benchmarks.md'
 markdown_extensions:
