Remove Scala 2.12 from the code and tests, move 2.13+ into shared code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
 
     strategy:
       matrix:
-        scala: ["2_12", "2_13", "3"]
+        scala: ["2_13", "3"]
         platform: ["jvm", "js", "native"]
         jvm: ['temurin:1.8.0-392', 'temurin:1.21.0.1']
       fail-fast: false
