--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,2 +1,2 @@
-FROM squidfunk/mkdocs-material:9.5.50
-RUN pip install mkdocs==1.6.1 mkdocs-macros-plugin==1.3.7
+FROM squidfunk/mkdocs-material:9.6.16
+RUN pip install mkdocs-macros-plugin==1.3.7
