--- a/.github/workflows/publish-benchmark-results.yml
+++ b/.github/workflows/publish-benchmark-results.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   push-to-data-repo:
 
+    name: Push benchmark results to data repository
+
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion == 'success'
     steps:
